--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,36 +1,43 @@
-[project]
+[tool.poetry]
 name = "backend"
 version = "0.1.0"
 description = ""
-authors = [
-    {name = "Mohit Motwani",email = "mohitmotwani1999@gmail.com"}
-]
+authors = ["Mohit Motwani <mohitmotwani1999@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.10,<4.0"
-dependencies = [
-    "pgvector (>=0.4.1,<0.5.0)",
-    "uvicorn[standard] (>=0.35.0,<0.36.0)",
-    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
-    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
-    "sentence-transformers (>=5.1.0,<6.0.0)",
-    "scikit-learn (>=1.7.1,<2.0.0)",
-    "supabase (>=2.18.0,<3.0.0)",
-    "fastapi (>=0.116.1,<0.117.0)",
-    "sqlalchemy (>=2.0.42,<3.0.0)",
-    "sqlalchemy[asyncio] (>=2.0.42,<3.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)",
-    "alembic (>=1.16.4,<2.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "pydantic (>=2.11.7,<3.0.0)",
-    "pydantic-settings (>=2.10.1,<3.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)",
-    "celery (>=5.5.3,<6.0.0)",
-    "redis (>=6.3.0,<7.0.0)",
-    "openai (>=1.99.1,<2.0.0)",
-    "fastapi-cors (>=0.0.6,<0.0.7)"
-]
+packages = [{include = "app"}]
 
+[tool.poetry.dependencies]
+python = ">=3.10,<4.0"
+pgvector = ">=0.4.1,<0.5.0"
+uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
+python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
+passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}
+sentence-transformers = ">=5.1.0,<6.0.0"
+scikit-learn = ">=1.7.1,<2.0.0"
+supabase = ">=2.18.0,<3.0.0"
+fastapi = ">=0.116.1,<0.117.0"
+sqlalchemy = {extras = ["asyncio"], version = ">=2.0.42,<3.0.0"}
+asyncpg = ">=0.30.0,<0.31.0"
+alembic = ">=1.16.4,<2.0.0"
+psycopg2-binary = ">=2.9.10,<3.0.0"
+pydantic = ">=2.11.7,<3.0.0"
+pydantic-settings = ">=2.10.1,<3.0.0"
+email-validator = ">=2.2.0,<3.0.0"
+celery = ">=5.5.3,<6.0.0"
+redis = ">=6.3.0,<7.0.0"
+openai = ">=1.99.1,<2.0.0"
+# fastapi-cors is not needed as FastAPI has built-in CORSMiddleware
+# I have removed it to keep dependencies clean.
+pandas = "^2.3.1"
+python-multipart = "^0.0.20"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.1"
+pytest-asyncio = "^0.23.0" # Updated to a more standard version
+httpx = "^0.27.0"
+pytest-mock = "^3.12.0"
+aiosqlite = "^0.21.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
