--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-# Note: The 'version' key is obsolete and has been removed as recommended.
 services:
   api:
     build: .
@@ -6,14 +5,11 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      # Mount the entire directory for hot-reloading. This is safe now
-      # because the dependencies are installed system-wide in the container.
       - .:/app
     env_file:
       - .env
     depends_on:
       - redis
-    # The command is simple because uvicorn is now globally available in the container's PATH.
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
   redis:
@@ -24,6 +20,19 @@ services:
     volumes:
       - redis_data:/data
     restart: unless-stopped
+
+  # --- NEW, CRITICAL SERVICE ---
+  worker:
+    build: .
+    container_name: kairos_worker
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    depends_on:
+      - redis
+    # This command starts the Celery worker.
+    command: celery -A app.core.celery_app.celery_app worker --loglevel=info
 
 volumes:
   redis_data:
