--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,6 +31,7 @@ openai = ">=1.99.1,<2.0.0"
 pandas = "^2.3.1"
 python-multipart = "^0.0.20"
 numpy = "^2.3.2"
+deepgram-sdk = "^4.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
