--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -33,6 +33,8 @@ python-multipart = "^0.0.20"
 numpy = "^2.3.2"
 deepgram-sdk = "^4.8.1"
 flower = "^2.0.1"
+statsmodels = "^0.14.5"
+scipy = "^1.16.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
